# telegram_cloud_rag_bot

./: .env.example  .env.vps.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.vps.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: cli.py  main.py
app/api/: main.py
app/bot/: handlers.py  keyboards.py  messages.py  update_logging_middleware.py  utils.py
app/core/: config.py  logging.py  notebooklm_time.py
app/services/: __init__.py  access_store.py  conversation_store.py  media_storyboard.py  notebooklm_background_sync.py  notebooklm_client.py  notebooklm_cookie_import.py  notebooklm_events.py  notebooklm_health.py  notebooklm_lightweight_history.py  notebooklm_metrics.py  notebooklm_remote_auth.py  notebooklm_runtime.py  notebooklm_service.py  notebooklm_source_sync.py  (+4 more)
scripts/: extract_cookies.py  setup_uptime_kuma.py
tests/: conftest.py  test_access_store.py  test_bot_handlers.py  test_bot_utils.py  test_conversation_store.py  test_env_example.py  test_extract_cookies.py  test_lightweight_imports.py  test_media_storyboard.py  test_notebooklm_android_extension.py  test_notebooklm_api.py  test_notebooklm_background_sync.py  test_notebooklm_client.py  test_notebooklm_cookie_import.py  test_notebooklm_health.py  test_notebooklm_lightweight_history.py  test_notebooklm_remote_auth.py  test_notebooklm_runtime.py  test_notebooklm_service.py  test_notebooklm_source_sync.py  test_notebooklm_upload_sync.py  test_openai_vision_context.py  test_telegram_stars.py  test_windows_chromium_auth.py  test_windows_sync_helper.py
(+17 files in other folders)
